# ForgeKit

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml  debug.yml  publish.yml  test.yml
crates/forgekit-cli/: Cargo.toml
crates/forgekit-cli/src/: main.rs
crates/forgekit-core/: Cargo.toml
crates/forgekit-core/src/: analytics.rs  asset_optimizer.rs  audit.rs  builder.rs  cache.rs  cicd.rs  config.rs  dependencies.rs  dev_server.rs  doc_generator.rs  docker.rs  env_manager.rs  error.rs  i18n.rs  lib.rs  migrations.rs  monitoring.rs  multi_target.rs  openapi.rs  package_manager.rs  packager.rs  plugin.rs  profiler.rs  project.rs  registry.rs  secrets.rs  templates.rs  testing.rs  validator.rs  version_manager.rs
npm-package/: .eslintrc.json  CONTRIBUTING.md  LICENSE  README.md  example.js  jest.config.js  package-lock.json  package.json  tsconfig.json
npm-package/__tests__/: forgekit.test.js
npm-package/src/: index.d.ts  index.js  index.ts
registry/index/: packages.json
