[package]
name = "forgekit-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[[bin]]
name = "forgekit"
path = "src/main.rs"

[dependencies]
forgekit-core = { path = "../forgekit-core" }
clap.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
