[package]
name = "forgekit-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tempfile.workspace = true
zip.workspace = true
walkdir.workspace = true
reqwest.workspace = true
chrono.workspace = true
dirs.workspace = true
regex.workspace = true
base64.workspace = true
